link updated, scrollbar removed, slider behaviour corrected

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -129,13 +129,13 @@
     height: 550px;
 
     @include tablet {
-      width: 100%;
       height: 390px;
+      width: 100%;
     }
 
     @include mobile {
-      width: 100vw;
       height: 210px;
+      width: 100vw;
     }
   }
 
@@ -143,8 +143,7 @@
     max-width: 570px;
     background-color: $white-color;
     box-shadow: 0 2px 0 rgba(21, 23, 22, 0.25);
-    transform: translateY(-40%);
-    margin-bottom: -80px;
+    margin-top: -80px;
     padding: 45px 100px 50px;
     transition: box-shadow 0.3s;
 
@@ -154,7 +153,7 @@
 
     @include mobile {
       padding: 24px 1px 20px;
-      margin-bottom: -52px;
+      margin-top: -52px;
     }
 
     @include hover {
