--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -20,6 +20,7 @@
   }
 
   &__body {
+    overflow-x:hidden;
     margin: 0;
 
     &--with-menu {
