--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,8 +1,8 @@
 .slider {
-  display: none;
+  display: none !important;
 
   @include tablet {
-    display: block;
+    display: block !important;
   }
 
   &__slide {
@@ -24,11 +24,11 @@
   }
 
   &__slide-2 {
-    background-image: url(../images/gallery-2.jpg);
+    background-image: url(../images/gallery-5.jpg);
   }
 
   &__slide-3 {
-    background-image: url(../images/gallery-3.jpg);
+    background-image: url(../images/gallery-2.jpg);
   }
 
   &__slide-4 {
